--- a/android-app/app/src/main/res/layout/activity_inbox.xml
+++ b/android-app/app/src/main/res/layout/activity_inbox.xml
@@ -1,8 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="6">
 
-    <!-- TODO: create this xml file -->
+    <ListView
+        android:id="@+id/InboxListViewFeed"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="5"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_weight="1.00">
+
+        <LinearLayout
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:scaleType="fitCenter"
+            android:background="@drawable/my_inbox_button_bg">
+        </LinearLayout>
+    </LinearLayout>
+
 </LinearLayout>
