--- a/android-app/app/src/main/res/layout/leaderboard_item.xml
+++ b/android-app/app/src/main/res/layout/leaderboard_item.xml
@@ -2,11 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="75dp"
-    android:orientation="horizontal"
-    android:weightSum="1">
+    android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/itemRank"
+        android:id="@+id/LBitemRank"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_margin="15dp"
@@ -15,25 +14,27 @@
         android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse" />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.4"
         android:gravity="center_vertical"
         android:orientation="vertical"
         android:weightSum="3">
 
         <TextView
-            android:id="@+id/itemName"
-            android:layout_width="match_parent"
+            android:id="@+id/LBitemAuthor"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left|center_vertical"
+            android:layout_margin="@dimen/view_margin"
+            android:text="[AUTHOR]"
+            android:gravity="start|center_vertical"
             android:textAppearance="@android:style/TextAppearance.Material.Subhead" />
 
         <TextView
             android:id="@+id/LBitemPoints"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left|center_vertical"
+            android:layout_margin="@dimen/view_margin"
+            android:gravity="start|center_vertical"
             android:text="[POINTS]"
             android:textAppearance="@android:style/TextAppearance.Material.Small" />
 
